Fixed dark mode

--- a/desktop/desktop.scss
+++ b/desktop/desktop.scss
@@ -49,7 +49,7 @@ body:not(.navigation-categories):not(.navigation-topics) #main-outlet {
 }
 
 .btn-default {
-    color: var(--secondary);
+    color: $color-mint-dark;
     background: $color-mint;
     transition: all 0.3s linear;
     border-radius: 10px;
@@ -72,7 +72,7 @@ html.discourse-no-touch .btn-default.btn-default .d-icon, html.discourse-no-touc
     justify-content: center;
     margin: 0;
     font-weight: normal;
-    color: var(--secondary);
+    color: $color-mint-dark;
     background: $color-mint;
     cursor: pointer;
     transition: all 0.25s;
