--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -5,6 +5,7 @@
 $color-white: revert;
 $color-black: #000000;
 $color-box-shadow: #65a797;
+$color-mint-dark: #518479;
 $color-mint: #75BDAD;
 //$color-mint: #E3EFEC;
 $color-blue: #e5f8ff;
